--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="128 Productions"
       content="Web site created by Jack McCalley"
     />
+    <meta name="keywords" content="128, 128 Productions, EDM, Music Events, Denver Events, Denver House Music, ">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
